# app.js
@@ -6,8 +6,7 @@ import cors from 'cors'
 import morgan from 'morgan'
 import { config } from "dotenv";
 import userRoutes from "./routes/user.route.js"
-import productRoutes from "./routes/product.route.js"
-import "./utils/db_connection.js"
+import productRoutes from "./routes/employee.route.js"
 import { corsFunction } from './utils/cors.js';
 import bodyParser from 'body-parser'
 import swaggerUi from "swagger-ui-express";
@@ -16,6 +15,7 @@ const PORT = process.env.PORT;
 import { createRequire } from "module";
 const require = createRequire(import.meta.url);
 const swaggerJson = require("./swagger.json");
+import db from './utils/db_connection.js'
 
 app.use(cors());
 app.use(morgan('dev'));
@@ -30,9 +30,12 @@ router.use((req, res, next)=>{
 app.use(corsFunction)
 app.use(bodyParser.json())
 
+;(async() =>{
+    await db.sequelize.sync()
+})();
 // routes
 app.use("/user",userRoutes)
-app.use("/product", productRoutes)
+app.use("/employee", productRoutes)
 
 app.listen(process.env.PORT || 3000, ()=>{
     console.log(`Server is listening on port ${PORT}`)
